
- improved smoothness for ramps (centripetal Catmull-Rom splines)
- changed opacity/transparency handling for ramps (Alpha/Acrylic have been deleted, only the material opacity value is supported now)

- GetElement, GetElementByName, GetBalls added to Table Script methods to have simple access to the elements and all active balls on the table
- renaming of IsVisible properties (flasher, ramp) to Visible

- flasher supports custom shapes and multi texturing. You can define two separate images and define a filter to blend these two images.
  in addition there is now a modulate option to define how the flasher blends with the underlying elements (0(=full additive)..1=(only modulate))
  plus the opacity and amount parameters can be set to values > 100%
  to fade a set of flashers in/out easily you can use the IntensityScale in the script, so that you do not need to use different opacity values
  look into the CommandReference.txt for additional changes to the functions that can be used
  
- collections can now group elements together. If you enable 'Group elements together' flag and you click on one element of the group all other members 
  of that group are selected. So you can move/scale/rotate them without multi-select element by element. If you want to select just one element of that group
  just shift-left click on the element and you can manipulate only that element. Unchecking the 'Group elements together' flag disable this feature for this collection.

- remove old shadowing code and replace it with optional screen space ambient occlusion (via the global video preferences and also the table options)
  the old 'casts shadow' setting is still in the UI, but is currently disabled as it is always true for now

- support primitive vertex sizes > 65535

- new external audio library for music playback (BASS)

- 64bit port (handle with care, might still cause issues)

- script editor updated to use latest scintilla (3.5.2)
